Round corners and fix swatch spacing

--- a/src/app/components/color-picker/color-picker.component.scss
+++ b/src/app/components/color-picker/color-picker.component.scss
@@ -1,35 +1,70 @@
-.color-picker {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  background-color: #aeaeae;
+#color-picker-container {
+  // CSS Variables
+  --swatch-size: 2rem;
+  --swatch-margin: 0.25rem;
+  --swatch-border-radius: 0.3rem;
+  --background-color: #aeaeae;
+  --arrow-size: 1.5rem;
+
   position: absolute;
   top: 50%;
   left: 50%;
 
-  // CSS Variables
-  --swatch-size: 2rem;
-  --swatch-margin: 0.35rem;
-
-  .row {
+  .color-picker {
     display: flex;
-    align-items: center;
-    padding: 0.25rem;
+    flex-direction: column;
+    padding: 10px;
+    background-color: var(--background-color);
+    border-radius: 0.2rem;
+
+    .row {
+      display: flex;
+      align-items: center;
+      padding: 0.25rem;
+    }
+
+    .swatch {
+      min-width: var(--swatch-size);
+      height: var(--swatch-size);
+      margin-inline: var(--swatch-margin);
+      border: 1px solid #ccc;
+      border-radius: var(--swatch-border-radius);
+      cursor: pointer;
+    }
+
+    input {
+      height: 30px;
+      width: calc((var(--swatch-size) * 4) + (var(--swatch-margin) * 6));
+      margin-inline: var(--swatch-margin);
+      padding: 5px;
+      background-color: #fff;
+      color: #000;
+    }
+
+    input:focus-visible {
+      outline: none;
+    }
   }
 
-  .swatch {
-    min-width: var(--swatch-size);
-    height: var(--swatch-size);
-    margin: var(--swatch-margin);
-    border: 1px solid #ccc;
-    cursor: pointer;
+  #color-picker-arrow-down {
+    position: relative;
+    left: 14rem;
+    width: 0;
+    height: 0;
+    border-left: var(--arrow-size) solid transparent;
+    border-right: var(--arrow-size) solid transparent;
+
+    border-top: var(--arrow-size) solid var(--background-color);
   }
 
-  input {
-    height: 30px;
-    width: calc((var(--swatch-size) * 4) + (var(--swatch-margin) * 6));
-    margin: var(--swatch-margin);
-    padding: 5px;
-    background-color: #fff;
+  #color-picker-arrow-up {
+    position: relative;
+    left: 14rem;
+    width: 0;
+    height: 0;
+    border-left: var(--arrow-size) solid transparent;
+    border-right: var(--arrow-size) solid transparent;
+
+    border-bottom: var(--arrow-size) solid var(--background-color);
   }
 }
